# bordercollie

./: .gitignore  CHARTER.md  README.md  __main__.py  bordercollie.py  pyproject.toml
tests/: test_bordercollie_docs.py
