[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bordercollie"
version = "1.0.0"
description = "Cocapn Fleet module — bordercollie"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[project.scripts]
bordercollie = "bordercollie:main"

